# absolute_zero_reproduction

./: .gitignore  README.md  constants.py  custom_types.py  main.py  prompts.py  pyproject.toml  requirements.txt  startup.sh  trainer.py  types.py
buffer/: abduction.py  base_buff.py  deduction.py  induction.py
chapter2_rl/exercises/part4_rlhf/: solutions.py
david/: sampler.py  sampler_2.py
evals/: AZR_coder_3b.sh  Qwen.sh  Qwen_batch_test.py  Qwen_coder_3b.sh  humaneval_plus.py  humaneval_plus.sh
model/: args.py  inference.py  train.py  trainer.py
model/compute/: advantages.py  reward.py
model/eval/: baselines.py  evaluator.py  prime_inversion.py  problem.py  prompts.py  results.py  test_prime_inversion.py
tests/: run_compute_tests.py  test_advantages.py  test_base_buff.py  test_prime_inversion.py  test_prompts.py  test_rewards.py  test_string_formatting.py
utils/: debug_grads.py  string_formatting.py  validate_by_executing.py
utils/mocks/: mock_transformer.py
