[project]
name = "absolute-zero-reproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "accelerate==1.7.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "beartype==0.14.1",
    "better-abc==0.0.3",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "datasets==3.6.0",
    "dill==0.3.8",
    "docker-pycreds==0.4.0",
    "einops==0.8.1",
    "fancy-einsum==0.0.3",
    "filelock==3.18.0",
    "fonttools==4.58.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "hf-xet==1.1.2",
    "huggingface-hub==0.32.0",
    "idna==3.10",
    "inspect-ai>=0.3.69",
    "jaxtyping==0.3.2",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.4.4",
    "multiprocess==0.70.16",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "propcache==0.3.1",
    "protobuf==6.31.0",
    "psutil==7.0.0",
    "pyarrow==20.0.0",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pytest>=8.3.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==14.0.0",
    "safetensors==0.5.3",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.29.1",
    "setproctitle==1.3.6",
    "setuptools==80.8.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sympy==1.14.0",
    "tabulate>=0.9.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.52.3",
    "transformers-stream-generator==0.0.5",
    "typeguard==4.4.2",
    "typing==3.10.0.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wadler-lindig==0.1.6",
    "wandb==0.19.11",
    "xxhash==3.5.0",
    "yarl==1.20.0",
]
